# my3rd

./: build-apk.yml  build_db.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml  build.yml  main.yml
