[project]
name = "bhoovalaya-stock-chakra-analyser"
version = "1.0.0"
description = "Shri Bhoovalaya Stock Chakra Analyser"
requires-python = ">=3.10"
dependencies = [
    "flet==0.28.3",
    "requests==2.32.3",
]

[tool.flet]
org = "com.bhoovalaya"
product = "oracle"
company = "bhoovalaya"

[tool.flet.android]
permissions = ["android.permission.INTERNET"]
